WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35082
[Haiku] Fix conversion from BString to String for real.
https://bugs.webkit.org/show_bug.cgi?id=35082
Summary
[Haiku] Fix conversion from BString to String for real.
Stephan Aßmus
Reported
2010-02-18 02:25:03 PST
The previous patch to this file was broken (sorry). First of all, the conversion from UTF8 was accidentally removed. Second, for empty strings, we need to point the implementation at StringImpl::empty().
Attachments
Fixes conversion from BString to String
(2.02 KB, patch)
2010-02-18 02:27 PST
,
Stephan Aßmus
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephan Aßmus
Comment 1
2010-02-18 02:27:58 PST
Created
attachment 48988
[details]
Fixes conversion from BString to String This patch fixes the conversion for real. Patch is again
r54932
and does not depend on any other patches.
Stephan Aßmus
Comment 2
2010-02-18 02:29:47 PST
BTW, the include sorting is correct, the style bot doesn't handle this case.
Eric Seidel (no email)
Comment 3
2010-02-22 14:04:09 PST
Comment on
attachment 48988
[details]
Fixes conversion from BString to String Changing bstring to string makes this more confusing to my eyes. Otherwise this looks sane.
WebKit Commit Bot
Comment 4
2010-02-23 08:32:11 PST
Comment on
attachment 48988
[details]
Fixes conversion from BString to String Clearing flags on attachment: 48988 Committed
r55154
: <
http://trac.webkit.org/changeset/55154
>
WebKit Commit Bot
Comment 5
2010-02-23 08:32:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug