2010-02-23  Michael Lotz <mmlr@mlotz.ch>

Reviewed by David Levin.

        [Haiku] Fix conversion from BString to String
        https://bugs.webkit.org/show_bug.cgi?id=35082

        The previous patch to this file was broken (sorry). First of all,
        the conversion from UTF8 was accidentally removed. Second, for
        empty strings, we need to point the implementation at StringImpl::empty().

        Covered by existing tests.

        * platform/text/haiku/StringHaiku.cpp:
        (WebCore::String::String):

git-svn-id: svn://svn.chromium.org/blink/trunk@55154 bbb929c8-8fbe-4397-9dbb-9b2b20218538